refactor : review SonarCube